--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -96,11 +96,32 @@ nav a {
   font-weight: 400;
 }
 /* main section styles */
-
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
 /* about section styles */
 .about {
   padding: 130px;
   border-radius: 10px;
   background: #fff8f3;
   margin: 130px 0;
+}
+
+.about-info-container {
+  display: flex;
+  justify-content: space-around;
+}
+.about-info {
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+}
+.about-info > h4 {
+  color: var(--Dark-03, #757575);
+  margin-bottom: 0;
+}
+.about-info > p {
+  margin-top: 0;
 }
