--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -100,6 +100,10 @@ main {
   max-width: 1140px;
   margin: 0 auto;
 }
+
+main section {
+  margin-top: 130px;
+}
 /* about section styles */
 .about {
   padding: 130px;
@@ -124,4 +128,39 @@ main {
 }
 .about-info > p {
   margin-top: 0;
+}
+
+/* what i do related styles */
+#what-i-do-description {
+  padding: 30px 150px;
+}
+
+.skills-container {
+  display: flex;
+  gap: 24px;
+}
+
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+/* resume section styles */
+.resume-column-title {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.resume-container{
+    display: flex;
+    gap: 50px;
 }
